# gpu_compute_test

./: Cargo.toml
shaders/: bubble.slang  bubble.wgsl  slangosrt.slang  slangsort.wgsl  sort.wgsl
src/: main copy.rs  main.rs  sort.wgsl  wgsl_helpers.rs
