[package]
name = "gpu_compute_test"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = { version = "28.0", features = ["wgpu-core"] }
bytemuck = { version = "1.24", features = ["derive"] }
rand = "0.9.2"
tracing = { version = "0.1.44", features = ["async-await"] }
tracing-subscriber = "0.3.22"
tracy-client = { version = "0.18.4", features = ["flush-on-exit"] }
pollster = "0.4.0"

